# rust_misp_mcp

./: .gitignore  Cargo.toml  MCP_ARCHITECTURE.md  README.md
mcp-core/: Cargo.toml
mcp-core/src/: error.rs  lib.rs  protocol.rs  registry.rs  server.rs  transport.rs
misp-mcp/: Cargo.toml
misp-mcp/src/: main.rs  misp_client.rs
misp-types/: Cargo.toml
misp-types/src/: lib.rs  types.rs
