[package]
name = "misp-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for MISP (Malware Information Sharing Platform) integration"
license = "MIT"

[dependencies]
mcp-core = { path = "../mcp-core" }
misp-types = { path = "../misp-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
clap.workspace = true
